# Drift-Resilient_Anomaly_Detection_Service

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
docker/: Dockerfile
src/drift_detect_service/: __init__.py  api.py  data_quality.py  model.py  monitoring.py  settings.py  train.py
tests/: conftest.py  test_smoke.py
